# wam-art

./: .gitignore  README.md  pyproject.toml
configs/: smoke_test.yaml
docs/: connected_fastwam_libero.md  connected_fastwam_robotwin.md
integrations/fastwam/: robotwin_wamart.patch
integrations/robotwin/: episode_callbacks.patch  runtime_compat.patch
results/: README.md
results/benchmarks/libero/spatial_task0/fixed_seed42/: README.md
results/benchmarks/libero/spatial_task0/fixed_seed42/clean/libero_spatial/: gpu0_task0_results.json  gpu0_task0_wamart.json
results/benchmarks/libero/spatial_task0/fixed_seed42/reference/: libero_spatial_task0.npz
results/benchmarks/robotwin/click_alarmclock/seed_sweep_v1/: README.md
results/benchmarks/robotwin/click_alarmclock/seed_sweep_v1/clean/: wamart.json
results/benchmarks/robotwin/click_alarmclock/seed_sweep_v1/gaussian_noise_sigma015/: wamart.json
results/benchmarks/robotwin/click_alarmclock/seed_sweep_v1/reference/: click_alarmclock.npz
results/connected_e2e_3464d95/clean/libero_spatial/: gpu0_task0_results.json  gpu0_task0_wamart.json
results/connected_e2e_3464d95/gaussian_blur_heavy/libero_spatial/: gpu0_task0_results.json  gpu0_task0_wamart.json
results/connected_e2e_3464d95/motion_blur_heavy/libero_spatial/: gpu0_task0_results.json  gpu0_task0_wamart.json
results/connected_e2e_3464d95/noise_heavy/libero_spatial/: gpu0_task0_results.json  gpu0_task0_wamart.json
results/connected_e2e_3464d95/occlusion_heavy/libero_spatial/: gpu0_task0_results.json  gpu0_task0_wamart.json
results/connected_e2e_3464d95/occlusion_light/libero_spatial/: gpu0_task0_results.json  gpu0_task0_wamart.json
scripts/: precompute_fastwam_libero_context.py  run_benchmark.py  run_temporal_benchmark.py  smoke_test.py  smoke_test_fastwam.py  smoke_test_openvla.py
tests/: test_conformal.py  test_editing.py  test_harness.py  test_models.py  test_online.py  test_pipeline_e2e.py  test_robotwin.py  test_simulator.py  test_trajectory.py  test_vlm_editor.py
wam_art/: __init__.py
wam_art/anomaly/: __init__.py
wam_art/config/: __init__.py
wam_art/editing/: __init__.py  corruptions.py  critic.py  vlm_editor.py
wam_art/eval/: __init__.py  harness.py  online.py  robotwin.py  simulator.py  temporal_harness.py  viz.py
wam_art/latents/: __init__.py  trajectory.py
wam_art/models/: __init__.py  base.py  dreamzero.py  dummy.py  fastwam.py  openvla.py
(+13 files in other folders)
